--- a/fileUploadModul/src/main/resources/templates/searchServer.html
+++ b/fileUploadModul/src/main/resources/templates/searchServer.html
@@ -17,18 +17,18 @@
 
                 <h2>视频中心</h2>
 
-                <div class="panel panel-default">
+<!--                <div class="panel panel-default">-->
 
-                    <div class="panel-body form-group" style="margin-bottom:0px;">
-                        <label class="col-sm-1 control-label" style="text-align: right; margin-top:5px">搜索：</label>
-                        <div class="col-sm-2">
-                            <input type="text" class="form-control" name="fuzzyKey" id="search_fuzzyKey"/>
-                        </div>
-                        <div class="col-sm-1 col-sm-offset-4">
-                            <button class="btn btn-primary" id="search_btn">查询</button>
-                        </div>
-                    </div>
-                </div>
+<!--                    <div class="panel-body form-group" style="margin-bottom:0px;">-->
+<!--                        <label class="col-sm-1 control-label" style="text-align: right; margin-top:5px">搜索：</label>-->
+<!--                        <div class="col-sm-2">-->
+<!--                            <input type="text" class="form-control" name="fuzzyKey" id="search_fuzzyKey"/>-->
+<!--                        </div>-->
+<!--                        <div class="col-sm-1 col-sm-offset-4">-->
+<!--                            <button class="btn btn-primary" id="search_btn">查询</button>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
 
                 <div class="mytab">
                     <table id="mytab" class="table table-hover"></table>
@@ -49,16 +49,18 @@
             striped : true, // 是否显示行间隔色
             pageNumber : 1, // 初始化加载第一页
             pagination : true,// 是否分页
-            // search: true,
+            search: true,
             sidePagination : 'server',// server:服务器端分页|client：前端分页
             pageSize : 2,// 单页记录数
             pageList : [ 5, 10, 20, 30 ],// 可选择单页记录数
             queryParams : function(params) {// 上传服务器的参数
+                debugger
                 var temp = {// 如果是在服务器端实现分页，limit、offset这两个参数是必须的
                     limit : params.limit, // 每页显示数量
                     offset : params.offset, // SQL语句起始索引
                     page: (params.offset / params.limit) + 1, //当前页码
-                    fuzzyKey : $('#search_fuzzyKey').val()
+                    // fuzzyKey : $('#search_fuzzyKey').val()
+                    fuzzyKey : params.search
                 };
                 return temp;
             },
