--- a/fileUploadModul/src/main/resources/templates/searchServer.html
+++ b/fileUploadModul/src/main/resources/templates/searchServer.html
@@ -2,9 +2,21 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 
-<head th:replace="fragments/header :: header"></head>
 <title>server</title>
 <meta charset="UTF-8">
+
+<link rel="stylesheet" href="../static/css/form-elements.css">
+<link rel="stylesheet" href="../static/css/style.css">
+<link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css" />
+<link href="../static/bootstrap-table-master/dist/bootstrap-table.min.css" rel="stylesheet">
+
+<script type="text/javascript" src="../static/js/jquery-core/jquery-3.2.1.min.js" ></script>
+<script src="../static/bootstrap-table-master/dist/bootstrap-table.min.js"></script>
+<script src="../static/bootstrap-table-master/dist/locale/bootstrap-table-zh-CN.min.js"></script>
+<script type="text/javascript" src="../static/bootstrap/js/bootstrap.min.js" ></script>
+<script type="text/javascript" src="../static/js/jquery-core/scripts.js"></script>
+<script type="text/javascript" src="../static/js/jquery-core/jquery.backstretch.min.js"></script>
+<script type="text/javascript" src="../static/bootstrap/js/bootstrapValidator.min.js"></script>
 <body>
 
 <div class="page-content-wrapper">
@@ -14,22 +26,19 @@
                 <div class="portlet-title">
 <!--                    <a href="#" class="btn default yellow-stripe" id="userAdd"><i class=""></i><span class="hidden-480"> 视频中心</span></a>-->
                 </div>
-
                 <h2>视频中心</h2>
-
-<!--                <div class="panel panel-default">-->
-
+<!--                <div class="panel-default">-->
 <!--                    <div class="panel-body form-group" style="margin-bottom:0px;">-->
-<!--                        <label class="col-sm-1 control-label" style="text-align: right; margin-top:5px">搜索：</label>-->
+<!--                        &lt;!&ndash;                        <label class="col-sm-1 control-label" style="text-align: right; margin-top:5px">搜索：</label>&ndash;&gt;-->
 <!--                        <div class="col-sm-2">-->
 <!--                            <input type="text" class="form-control" name="fuzzyKey" id="search_fuzzyKey"/>-->
 <!--                        </div>-->
-<!--                        <div class="col-sm-1 col-sm-offset-4">-->
+<!--                        <div class="col-sm-1">-->
 <!--                            <button class="btn btn-primary" id="search_btn">查询</button>-->
 <!--                        </div>-->
 <!--                    </div>-->
 <!--                </div>-->
-
+                <a class="btn btn-default" onclick="back()" role="button" style="position:fixed;top:19px;right: 42px;">返回主页</a>
                 <div class="mytab">
                     <table id="mytab" class="table table-hover"></table>
                 </div>
@@ -38,62 +47,77 @@
     </div>
 </div>
 
-
 <script type="text/javascript">
     var path = getContextPath();
     $(function() {
         $('#mytab').bootstrapTable({
             method : 'post',
             contentType: "application/x-www-form-urlencoded",//当请求方法为post的时候,必须要有！！！！
-            url : path + "/getListPage",// 请求路径
+            url : path + "/getListPagePlugin",// 请求路径
             striped : true, // 是否显示行间隔色
             pageNumber : 1, // 初始化加载第一页
             pagination : true,// 是否分页
-            search: true,
             sidePagination : 'server',// server:服务器端分页|client：前端分页
-            pageSize : 2,// 单页记录数
-            pageList : [ 5, 10, 20, 30 ],// 可选择单页记录数
+            search:false,
+            strictSearch:false,
+            searchText:'关键词搜索',
+            pageSize : 5,// 单页记录数
+            pageList : [5],// 可选择单页记录数
             queryParams : function(params) {// 上传服务器的参数
-                debugger
                 var temp = {// 如果是在服务器端实现分页，limit、offset这两个参数是必须的
                     limit : params.limit, // 每页显示数量
                     offset : params.offset, // SQL语句起始索引
                     page: (params.offset / params.limit) + 1, //当前页码
-                    // fuzzyKey : $('#search_fuzzyKey').val()
-                    fuzzyKey : params.search
+                    fuzzyKey : $('#search_fuzzyKey').val()
+                    // fuzzyKey : params.search
                 };
                 return temp;
             },
             columns : [ {
                 title : '标题',
                 field : 'title',
-                sortable : true
+                halign:"center",
+                sortable : false
             }, {
                 title : '数据类型',
                 field : 'dataType',
-                sortable : true
+                halign:"center",
+                sortable : false
+            },{
+                title : '文件名称',
+                field : 'fileName',
+                halign:"center",
+                sortable : false
             }, {
                 title : '链接',
-                field : 'fileUrl',
-            } , {
+                halign:"center",
+                field : 'fileUrl'
+            }, {
+                title : '备注',
+                halign:"center",
+                field : 'remark'
+            }, {
                 title : '操作',
+                halign:"center",
                 field : 'id',
                 formatter : option
             }
             ]
-        })
+        });
+
+    });
 
         // 定义删除、更新操作
         function option(value, row, index) {
-            var htm = '<button id="delInfo" userId='+ value+ ' onclick="delUser(this)">删除</button>' +
-                '<button id="dupUser" onclick="updInfo('+ value + ')">修改</button>'
+            var htm = '<button id="delInfo" objid='+ value+ ' onclick="delInfo(this)">删除</button>'
+                // + '<button id="dupUser" onclick="updInfo('+ value + ')">修改</button>'
             return htm;
         }
 
         // 查询按钮事件
         $('#search_btn').click(function() {
             $('#mytab').bootstrapTable('refresh', {
-                url : path + '/getListPage'
+                url : path + '/getListPagePlugin'
             });
         })
 
@@ -107,21 +131,20 @@
             //     content : path + '/addInfo',
             //     end : function() {
             //         $("#mytab").bootstrapTable('refresh', {
-            //             url : path + "/getListPage"
+            //             url : path + "/getListPagePlugin"
             //         });
             //     }
             // });
         });
 
-    })
+
 
     // 删除用户
     function delInfo(dom) {
-        debugger
         var mymessage = confirm("确认删除嘛？");
         if (mymessage == true) {
             $.ajax({
-                url : path + '/deleteInfoById/' + $(dom).attr("id"),
+                url : path + '/deleteInfoById/' + $(dom).attr("objid"),
                 type : 'delete',
                 success : function(data) {
                     $(dom).parent().parent().hide();
@@ -147,6 +170,11 @@
         //         });
         //     }
         // });
+    }
+
+    function back()
+    {
+        window.location.href= path +"/index";
     }
 
     // 获取项目路径
