--- a/fileUploadModul/src/main/resources/static/css/style.css
+++ b/fileUploadModul/src/main/resources/static/css/style.css
@@ -67,7 +67,8 @@ img { max-width: 100%; }
 	width: 181px;
 	height: 43px;
 	margin: 0 auto;
-	background: url(../img/zblogopre.png) center center no-repeat;
+	background: url(../img/zb2@2x-8.png) center center no-repeat;
+	background-size: 100% 100%;
 }
 
 .top-content .text h1 {
