--- a/fileUploadModul/src/main/resources/templates/searchServer.html
+++ b/fileUploadModul/src/main/resources/templates/searchServer.html
@@ -39,6 +39,7 @@
 <!--                    </div>-->
 <!--                </div>-->
                 <a class="btn btn-default" onclick="back()" role="button" style="position:fixed;top:19px;right: 42px;">返回主页</a>
+
                 <div class="mytab">
                     <table id="mytab" class="table table-hover"></table>
                 </div>
@@ -58,7 +59,7 @@
             pageNumber : 1, // 初始化加载第一页
             pagination : true,// 是否分页
             sidePagination : 'server',// server:服务器端分页|client：前端分页
-            search:false,
+            search:true,
             strictSearch:false,
             searchText:'关键词搜索',
             pageSize : 5,// 单页记录数
@@ -68,8 +69,8 @@
                     limit : params.limit, // 每页显示数量
                     offset : params.offset, // SQL语句起始索引
                     page: (params.offset / params.limit) + 1, //当前页码
-                    fuzzyKey : $('#search_fuzzyKey').val()
-                    // fuzzyKey : params.search
+                    // fuzzyKey : $('#search_fuzzyKey').val()
+                    fuzzyKey : params.search
                 };
                 return temp;
             },
@@ -187,6 +188,22 @@
             .substring(0, pathName.substr(1).indexOf('/') + 1);
         return (localhostPath + projectName);
     }
+
+    function onKeyDown(event){
+        var e = event || window.event || arguments.callee.caller.arguments[0];
+        if(e && e.keyCode==27){ // 按 Esc
+                //要做的事情
+        }
+        if(e && e.keyCode==113){ // 按 F2
+                 //要做的事情
+        }
+        if(e && e.keyCode==13){ // enter 键
+                 alert("此处回车触发搜索事件");
+        }
+     }
+
+
+
 </script>
 
 </body>
